--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "koa-swig": "^2.2.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
